# decent-bench

./: .gitignore  LICENSE  README.md  pyproject.toml  readthedocs.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml
decent_bench/: __init__.py  agent.py  agents.py  benchmark.py  benchmark_problem.py  centralized_algorithms.py  cost_functions.py  costs.py  datasets.py  distributed_algorithms.py  network.py  networks.py  progress_bar.py  schemes.py
decent_bench/algorithms/: __init__.py  _algorithm.py  cent_algorithms.py  dst_algorithms.py  utils.py
decent_bench/algorithms/decentralized/: __init__.py  _atc.py  _atc_tracking.py  _atg.py  _aug_dgm.py  _dgd.py  _dinno.py  _dlm.py  _ed.py  _extra.py  _gt_saga.py  _gt_sarah.py  _gt_vr.py  _kgt.py  _led.py  _lt_admm.py  _lt_admm_vr.py  _nids.py  _prox_skip.py  _simple_gt.py  _wang_elia.py
decent_bench/algorithms/federated/: __init__.py  _fed_adagrad.py  _fed_adam.py  _fed_algorithm.py  _fed_avg.py  _fed_dyn.py  _fed_lt.py  _fed_nova.py  _fed_opt.py  _fed_pd.py  _fed_prox.py  _fed_yogi.py  _scaffold.py
decent_bench/algorithms/p2p/: __init__.py  _admm.py  _atc.py  _atc_tracking.py  _atg.py  _aug_dgm.py  _dgd.py  _dinno.py  _dlm.py  _ed.py  _extra.py  _gt_saga.py  _gt_sarah.py  _gt_vr.py  _kgt.py  _led.py  _lt_admm.py  _lt_admm_vr.py  _nids.py  _p2p_algorithm.py  _prox_skip.py  _simple_gt.py  _wang_elia.py
decent_bench/benchmark/: __init__.py  _benchmark.py  _benchmark_problem.py  _benchmark_result.py  _compute.py  _display.py  _metric_result.py  _metrics_result.py  _utils.py
decent_bench/benchmark/_compute/: _compute_metrics.py  compute_metrics_at_iter.py  compute_plots.py  compute_tables.py
decent_bench/benchmark/_display/: _display_metrics.py  display_plots.py  display_tables.py
decent_bench/cost_functions/: cost_function.py  linear_regression_cost.py  logistic_regression_cost.py  quadratic_cost.py  sum_cost.py
decent_bench/costs/: __init__.py  _cost.py  _kwarg_types.py  _linear_regression_cost.py  _logistic_regression_cost.py  _quadratic_cost.py  _sum_cost.py
decent_bench/costs/_base/: __init__.py  (+6 more)
decent_bench/datasets/: __init__.py  _dataset.py  _dataset_handler.py  _kaggle_dataset.py  _kaggle_handler.py  _partitioners.py  _pytorch_dataset.py  _pytorch_handler.py  _synthetic_classification.py  _synthetic_classification_handler.py  _synthetic_regression_handler.py  dataset.py  synthetic_classification_data.py
decent_bench/metrics/: __init__.py  _computational_cost.py  _create_plots.py  _create_tables.py  _metric.py  _metrics_view.py  _plots.py  _runtime_metric.py  _runtime_metric_plotter.py  _tables.py  metric.py  metric_collection.py  metric_library.py  metric_utils.py  plot_metrics.py  runtime_collection.py  runtime_library.py  table_metrics.py  utils.py
decent_bench/schemes/: drop_schemes.py
decent_bench/utils/: __init__.py  _metric_helpers.py  _tags.py  agent_utils.py  algorithm_helpers.py  array.py  checkpoint_manager.py  interoperability.py  logger.py  network_utils.py  parameter.py  progress_bar.py  pytorch_utils.py  tags.py  types.py
docs/: requirements.txt  sphinx_theme.txt
docs/examples/: basic_fed_example.py  basic_p2p_example.py  checkpointing_fed_custom_options.py  checkpointing_fed_example.py  client_selection.py  display_metrics_customization.py  linear_convergence_rate.py  network_drawing.py  network_from_adjacency.py  network_generation.py  network_generation_schemes.py  stochastic_fed_example.py
docs/source/: advanced.rst  advanced_pytorch_optimizer.rst  author.rst  background.rst  conf.py  decent_bench.agent.rst  decent_bench.algorithms.rst  decent_bench.benchmark_problem.rst  decent_bench.centralized_algorithms.rst  decent_bench.cost_functions.rst  decent_bench.datasets.rst  decent_bench.library.core.benchmark_problem.rst  decent_bench.library.core.benchmark_problem.schemes.rst  decent_bench.library.core.cost_functions.rst  decent_bench.library.core.metrics.plot_metrics.rst  decent_bench.library.core.metrics.rst  decent_bench.library.core.metrics.table_metrics.rst  decent_bench.library.core.rst  decent_bench.library.rst  decent_bench.library.utils.rst  decent_bench.metrics.plot_metrics.rst  decent_bench.metrics.rst  decent_bench.metrics.table_metrics.rst  decent_bench.network.rst  decent_bench.rst  decent_bench.schemes.rst  decent_bench.utils.logger.rst  decent_bench.utils.rst  developer.rst  index.rst  references.bib  user.rst
examples/: .gitignore
examples/FEMNIST/: femnist.ipynb
examples/MNIST/: main_mnist.py  mnist.ipynb
examples/consensus/: consensus.ipynb
examples/nim/: .gitignore  another_another_test.py  another_test.py  another_test_2.py  compare_mnist_results.ipynb  compare_nim_results.ipynb  compare_results.ipynb  edit_checkpoint.ipynb  inspect_results.ipynb  main.py  main_mnist.py  main_mnist_final_experiment.py  main_mnist_final_experiment_false.py  main_mnist_final_experiment_mask_z_test.py  main_mnist_final_experiment_mask_z_test_false.py  main_mnist_final_search.py  main_mnist_load_metrics_result.py  main_mnist_resume.py  main_mnist_test_ema.py  main_mnist_test_ema_hetero.py  main_nim.py  main_nim_experiment_hyper.py  main_nim_experiment_hyper_2.py  main_nim_experiment_random.py  main_nim_experiment_random_2.py  mini.py  neural_implicit_mapping.ipynb  proxskip_test.ipynb  scoring.md  test.ipynb  test_nim.ipynb  test_nim.py
test/: test_agents.py  test_algorithms.py  test_benchmark.py  test_centralized_algorithms.py  test_cost_operators.py  test_cost_type_preservation.py  test_costs.py  test_dataset_partitioners.py  test_display.py  test_distributed_algorithms.py  test_docs_examples.py  test_empirical_risk_sampling.py  test_fedavg.py  test_feddyn.py  test_federated_aggregation.py  test_federated_cost_routing.py  test_fedlt.py  test_fednova.py  test_fedpd.py  test_fedprox_cost_routing.py  test_import.py  test_links.py  test_metric_result.py  test_networks.py  test_pytorch_cost.py  test_regularizers.py  test_scaffold.py  test_schemes.py
test/utils/: test_algorithm_helpers.py  test_array.py  test_checkpoints.py  test_interoperability.py
(+170 files in other folders)
