[project]
name = "decent-bench"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
]

[project.optional-dependencies]
dev = [
  "microsoft-python-type-stubs @ git+https://github.com/microsoft/python-type-stubs.git",
  "mypy",
  "pytest",
  "ruff",
  "scipy-stubs",
  "sphinx",
  "sphinx_rtd_theme"
]

[tool.tox]
envlist = ["dev", "mypy", "pytest", "ruff", "sphinx"]

[tool.tox.env.dev]
description = "Generate dev venv with all dependencies, active with `source .tox/dev/bin/activate`"
deps = [".[dev]"]

[tool.tox.env.sphinx]
description = "Clean up and regenerate rst and html files using sphinx"
deps = ["sphinx", "sphinx_rtd_theme"]
allowlist_externals = ["find", "make"]
commands = [
  ["find", "docs/source", "-name", "*.rst", "!", "-name", "index.rst", "-delete"],
  ["sphinx-apidoc", "-o", "docs/source", "decent_bench", "--no-toc"],
  ["make", "-C", "docs", "clean"],
  ["make", "-C", "docs", "html", "SPHINXOPTS=-W"],
]

[tool.tox.env.mypy]
description = "Run mypy (static type checker)"
deps = [".[dev]"]
commands = [["mypy", "decent_bench"]]

[tool.tox.env.pytest]
description = "Run pytest (test executor)"
deps = ["pytest"]
commands = [["pytest"]]

[tool.tox.env.ruff]
description = "Run ruff (format and style checker)"
deps = ["ruff"]
commands = [
  ["ruff", "check", "decent_bench"],
  ["ruff", "format", "decent_bench", "--check"]
]

[tool.pytest.ini_options]
addopts = "-q -W error"
testpaths = ["test"]

[tool.mypy]
strict = true

[tool.ruff]
lint.flake8-annotations.mypy-init-return = true
lint.select = ["ALL"]
lint.ignore = [
  "COM812",   # missing-trailing-comma (COM812) may cause conflicts when used with the formatter
  "CPY001",   # missing-copyright-notice
  "D100",     # undocumented-public-module
  "D104",     # undocumented-public-package
  "D107",     # undocumented-public-init
  "D203",     # incorrect-blank-line-before-class (D203) and no-blank-line-before-class (D211) are incompatible
  "D212",     # multi-line-summary-first-line (D212) and multi-line-summary-second-line (D213) are incompatible
  "D415",     # missing-terminal-punctuation, D400 already enforces first line to end with period
  "DOC201",   # docstring-missing-returns, always documenting the return value is too verbose
  "EM101",    # raw-string-in-exception, complains about putting raw string as error msg
  "EM102",    # f-string-in-exception, complains about putting f string as error msg
  "PLR0913",  # too-many-arguments, complains when there are more than 5 arguments
  "PLR2004",  # magic-value-comparison, complains about dimension checks in cost functions
  "PLR6301",  # no-self-use, complains when self is unused even when implementing an abstract method
  "S311",     # suspicious-non-cryptographic-random-usage, complains about `random.random()`
  "TC002",    # typing-only-third-party-import, reduced rt overhead but slowed development and messy imports
  "TC003",    # typing-only-standard-library-import, reduced rt overhead but slowed development and messy imports
  "TRY003",   # raise-vanilla-args, complains about simple error messages like `ValueError('Matrix A must be 2D')`
]
preview = true
line-length = 120
