[project]
name = "decent-bench"
version = "0.1.1"
authors = [{name = "Elias Ram"}, {name = "Nicola Bastianello"}]
maintainers = [{name = "Team Decent"}]
description = "A benchmarking framework for decentralized optimization"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
license = "AGPL-3.0-only"
dependencies = [
  "matplotlib",
  "networkx",
  "numpy",
  "rich",
  "scipy",
  "scikit-learn",
  "tabulate",
]

[project.urls]
Documentation = "https://decent-bench.readthedocs.io/en/latest/"
Source = "https://github.com/team-decent/decent-bench"
Issues = "https://github.com/team-decent/decent-bench/issues"

[project.optional-dependencies]
dev = [
  "hatch",
  "mypy",
  "pytest",
  "ruff",
  "scipy-stubs",
  "sphinx",
  "types-networkx",
  "types-tabulate",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.tox]
envlist = ["dev", "mypy", "pytest", "ruff", "sphinx"]

[tool.tox.env.dev]
description = "Generate dev venv with all dependencies, active with `source .tox/dev/bin/activate`"
deps = [
  ".[dev]",
  "git+https://github.com/microsoft/python-type-stubs.git@main",
  "git+https://github.com/pydata/pydata-sphinx-theme.git@main"
]

[tool.tox.env.sphinx]
description = "Clean up and regenerate rst and html files using sphinx"
deps = ["sphinx", "git+https://github.com/pydata/pydata-sphinx-theme.git@main"]
allowlist_externals = ["find", "make"]
commands = [
  ["find", "docs/source/api", "-name", "*.rst", "!", "-path", "*/snippets/*", "-delete"],
  ["sphinx-apidoc", "-o", "docs/source/api", "decent_bench", "--separate", "--no-toc", "--templatedir=docs/source/_templates"],
  ["make", "-C", "docs", "clean"],
  ["make", "-C", "docs", "html", "SPHINXOPTS=-W"],
]

[tool.tox.env.mypy]
description = "Run mypy (static type checker)"
deps = [".[dev]", "git+https://github.com/microsoft/python-type-stubs.git@main"]
commands = [["mypy", "decent_bench"]]

[tool.tox.env.pytest]
description = "Run pytest (test executor)"
deps = ["pytest"]
commands = [["pytest"]]

[tool.tox.env.ruff]
description = "Run ruff (format and style checker)"
deps = ["ruff"]
commands = [
  ["ruff", "check", "decent_bench"],
  ["ruff", "format", "decent_bench", "--check"]
]

[tool.pytest.ini_options]
addopts = "-q -W error"
testpaths = ["test"]

[tool.mypy]
strict = true

[tool.ruff]
lint.flake8-annotations.mypy-init-return = true
lint.select = ["ALL"]
lint.ignore = [
  "BLE001",   # blind-except, complains when catching `Exception`
  "C901",     # complex-structure, complains when there are many branches
  "COM812",   # missing-trailing-comma, may cause conflicts when used with the formatter
  "CPY001",   # missing-copyright-notice
  "D100",     # undocumented-public-module
  "D104",     # undocumented-public-package
  "D107",     # undocumented-public-init
  "D203",     # incorrect-blank-line-before-class, incompatible with no-blank-line-before-class (D211)
  "D212",     # multi-line-summary-first-line, incompatible with multi-line-summary-second-line (D213)
  "D415",     # missing-terminal-punctuation, D400 already enforces first line to end with period
  "DOC201",   # docstring-missing-returns, always documenting the return value is too verbose
  "EM101",    # raw-string-in-exception, complains about putting raw string as error msg
  "EM102",    # f-string-in-exception, complains about putting f string as error msg
  "FURB140",  # reimplemented-starmap, wants to replace comprehensions with the less efficient itertools.starmap
  "PLR0913",  # too-many-arguments, complains when there are more than 5 arguments
  "PLR2004",  # magic-value-comparison, complains about dimension checks in cost functions
  "PLR6301",  # no-self-use, complains when self is unused even when implementing an abstract method
  "S311",     # suspicious-non-cryptographic-random-usage, complains about `random.random()`
  "TC001",    # typing-only-first-party-import, reduced rt overhead but slower development and messy imports
  "TC002",    # typing-only-third-party-import, reduced rt overhead but slower development and messy imports
  "TC003",    # typing-only-standard-library-import, reduced rt overhead but slower development and messy imports
  "TRY003",   # raise-vanilla-args, complains about simple error messages like `ValueError('Matrix A must be 2D')`
]
preview = true
line-length = 120
